# lab7_8_9

./: CMakeLists.txt
lab7/: books.txt  groups.txt  header.h  lab7-1.cpp  lab7-2  lab7-2.cpp  lab7-3  lab7-3.cpp
lab8/: header.h  lab8  lab8.cpp
lab9/: header.h  lab9_1  lab9_1.cpp  lab9_2  lab9_2.cpp
