cmake_minimum_required(VERSION 4.0)
project(lab7_8_9)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab7_8_9 main.cpp
        lab7/lab7-1.cpp
        lab7/header.h
        lab7/lab7-2.cpp
        lab7/lab7-3.cpp
        lab8/header.h
        lab8/lab8.cpp
        lab9/header.h
        lab9/lab9_1.cpp
        lab9/lab9_2.cpp)
